--- a/crowdfunding/package.json
+++ b/crowdfunding/package.json
@@ -6,9 +6,11 @@
     "release": "npx thirdweb@latest release"
   },
   "devDependencies": {
+    "@openzeppelin/hardhat-upgrades": "^1.28.0",
     "hardhat": "^2.10.1"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.9.2",
     "@thirdweb-dev/contracts": "^3",
     "dotenv": "^16.0.3"
   }
