--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
     "@thirdweb-dev/react": "^3.11.1",
     "@thirdweb-dev/sdk": "^3.10.5",
     "ethers": "^5.7.2",
+    "fs": "^0.0.1-security",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "solc": "^0.8.20"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^2",
